# dotfiles-manager

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: ALTERNATIVES.md  sensitive-data-strategy.md  store-patterns.md
dotgit/cli/: main.py
dotgit/mcp/: server.py
dotgit/sdk/: config.py  exclude.py  ignore.py  remote.py  repo.py  stores.py  sync.py
tests/: conftest.py  test_exclude.py  test_export_import.py  test_hooks.py  test_ignore.py  test_remote.py  test_safety.py  test_status_sync.py  test_stores.py  test_track.py
